// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CourseCardLayout snapshot is collapsed 1`] = `
<div
  className="mb-4.5 course-card"
  data-testid="CourseCard"
>
  <Card
    orientation="vertical"
  >
    <div
      className="d-flex flex-column w-100"
    >
      <div
        className="d-flex"
      >
        <CourseCardContent
          cardId="test-card-id"
        />
      </div>
      <div
        className="course-card-banners"
        data-testid="CourseCardBanners"
      >
        <CourseCardBanners
          cardId="test-card-id"
        />
      </div>
    </div>
  </Card>
</div>
`;

exports[`CourseCardLayout snapshot is not collapsed 1`] = `
<div
  className="mb-4.5 course-card"
  data-testid="CourseCard"
>
  <Card
    orientation="horizontal"
  >
    <div
      className="d-flex flex-column w-100"
    >
      <div
        className="d-flex"
      >
        <CourseCardContent
          cardId="test-card-id"
        />
      </div>
      <div
        className="course-card-banners"
        data-testid="CourseCardBanners"
      >
        <CourseCardBanners
          cardId="test-card-id"
        />
      </div>
    </div>
  </Card>
</div>
`;
